<resources>
    <string name="app_name">FirstXMLProjectAINotePad</string>
    <string name="easy_notes">Easy Notes</string>
    <string name="click_me">Click Me</string>
    <string name="_continue">Continue</string>
    <string name="language">Language</string>
    <string name="search_languages">Search Languages</string>
    <string name="english">English</string>
    <string name="notepad">Notepad</string>
    <string name="all">All</string>
    <string name="work">Work</string>
    <string name="office">Office</string>
    <string name="shipping">Shipping</string>
    <string name="shopping">Shopping</string>
    <string name="add_your_first_note">Add your first note</string>
    <string name="notes">Notes</string>
    <string name="calender">Calender</string>
    <string name="search">Search</string>
    <string name="templates">Templates</string>
    <string name="activitysettingsbinding">ActivitySettingsBinding</string>
    <string name="hellow_world">hellow world</string>
    <string name="more">More</string>
    <string name="upgrade_premium">Upgrade Premium</string>
    <string name="enjoy_free_ad_s_experience">Enjoy Free Ad\'s Experience</string>
    <string name="general">General</string>
    <string name="others">Others</string>
    <string name="app_languages">App Languages</string>
    <string name="ai_notes">AI Notes</string>
    <string name="ai_chat">AI Chat</string>
    <string name="notepad_app">Notepad App</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="trash">Trash</string>

    <string name="history">History</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_your_experience">Share your experience</string>
    <string name="feedback">Feedback</string>
    <string name="add_your_suggestions">Add your suggestions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="learn_privacy_policy">Learn Privacy Policy</string>
    <string name="version">Version</string>
    <string name="_2_4_1">2.4.1</string>
    <string name="please_select_the_type_of_feedback">Please Select the Type of Feedback</string>
    <string name="connection_problem">Connection Problem</string>
    <string name="app_not_working">App not Working</string>
    <string name="app_take_to_much_time_on_loading">App take to much time on loading</string>
    <string name="suggest_your_favorite_apps_others"><![CDATA[Suggest your favorite apps & others]]></string>
    <string name="description">Description</string>
    <string name="write_suggestion_here">Write Suggestion here ...</string>
    <string name="submit">Submit</string>
    <string name="tell_us_about_your_experience_with_the_notes_taing_app">Tell us about your Experience with the Notes taing App</string>
    <string name="send_feedback">Send feedback</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="_empty"> </string>
    <string name="very_bad">Very Bad</string>
    <string name="confused">Confused</string>
    <string name="average">Average</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
    <string name="voice_to_text">Voice to Text</string>
    <string name="tap_to_record">Tap to Record</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="recording">Recording</string>
    <string name="text">Text</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="add_note">Add note</string>
    <string name="copy">copy</string>
    <string name="save">save</string>
    <string name="no_note_found">No Note Found</string>
    <string name="skip">skip</string>
    <string name="hi">Hi!</string>
    <string name="let_me_guide_you_through_your_first_note_creation">Let me guide you through your first note creation.</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="get_premium">Get Premium</string>
    <string name="choose_a_subscription_plan_and_get_the_best_experience_of_using_the_app">Choose a subscription plan and get the best experience of using the app</string>
    <string name="unlock_premium_features">Unlock Premium Features</string>
    <string name="remove_all_ads">Remove All Ads</string>
    <string name="unlock_all_premium_features">Unlock All Premium Features</string>
    <string name="unlimited_chat_credits">Unlimited Chat Credits</string>
    <string name="one_time_purchase">One Time Purchase</string>
    <string name="life_time_access">Life time access</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="term_of_use">Term of Use</string>
    <string name="note_background">Note Background</string>
    <string name="create_note_with_this">Create Note with this</string>
    <string name="upload_image">Upload Image</string>
    <string name="calendar">Calendar</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="ask_me_anything">Ask me anything...</string>
    <string name="get_more_credit">Get More Credit</string>
    <string name="ai_notepad_is_based_on_the_paid_service_of_chatgpt_which_is_why_each_message_consumes_2_credits">Ai Notepad is based on the paid service of ChatGPT. which is why each message consumes 2 credits.</string>
    <string name="get_5_free_credits">Get 5 Free Credits</string>
    <string name="watch_ad_to_earn_5_more_credits">Watch Ad to earn 5 more Credits.</string>
    <string name="import_image">Import Image</string>
    <string name="_03_12_2024">03/12/2024</string>
    <string name="title">Title</string>
    <string name="note_here">Note here</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="sports">Sports</string>
    <string name="health_fitness"><![CDATA[Health & fitness]]></string>
    <string name="travel_tips">Travel Tips</string>
    <string name="captions">Captions</string>
    <string name="tweet">Tweet</string>
    <string name="essays">Essays</string>
    <string name="brain_stromming">Brain Stromming</string>
    <string name="business">Business</string>
    <string name="you_have_6_free_questions_left">You have 6 free questions left</string>
    <string name="hi_this_is_emma_ask_me_anything">Hi this is Emma Ask me anything</string>
    <string name="home">Home</string>


</resources>