<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_15sdp"
    tools:context=".presentation.features.premium_screen.Premium_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30ssp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/get_premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_premium"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_30sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_shine_star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/get_premium"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cross"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_purple_cross"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:contentDescription="@null"
        android:src="@drawable/ic_premium_screen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_15ssp"
        android:text="@string/choose_a_subscription_plan_and_get_the_best_experience_of_using_the_app"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/unlock_premium_features"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">


        <ImageView

            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@drawable/ic_tickwithcircle" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10ssp"
            android:text="@string/remove_all_ads"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">


        <ImageView

            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@drawable/ic_tickwithcircle" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10ssp"
            android:text="@string/unlimited_chat_credits"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">


        <ImageView

            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:src="@drawable/ic_tickwithcircle" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10ssp"
            android:text="@string/unlock_all_premium_features"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

    <FrameLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:backgroundTint="@color/transparent"
            app:strokeWidth="@dimen/_2sdp"
            app:strokeColor="@color/purpleF0"
            app:cornerRadius="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/one_time_purchase"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/dollar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$99.9"
                    android:textColor="@color/purpleF0"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/life_time_access"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dollar" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
<Button
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/subscribe_now"
    android:drawableEnd="@drawable/ic_double_white_arrow"
    android:backgroundTint="@color/purpleF0"/>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grayB1"
            android:text="@string/privacy_policy"/>
        <TextView
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:textColor="@color/grayB1"
            android:layout_height="wrap_content"
            android:text="|||"/>
        <TextView
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:textColor="@color/grayB1"
            android:layout_height="wrap_content"
            android:text="@string/term_of_use"/>
    </LinearLayout>

</LinearLayout>
