<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.features.bottom_exit_dialog.BottomExitDialog">


    <LinearLayout
        android:paddingVertical="@dimen/_30sdp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:src="@drawable/ic_exit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_18ssp"
            android:paddingHorizontal="@dimen/_30ssp"
            android:text="@string/are_you_sure_you_want_to_exit"
            android:textAlignment="center"
            android:textSize="@dimen/_18ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_40sdp"
                android:backgroundTint="@color/purpleFF"
                android:text="@string/yes"
                android:textColor="@color/purpleF0" />

            <Space
                android:layout_width="@dimen/_8sdp"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_40sdp"
                android:backgroundTint="@color/purpleF0"
                android:text="@string/no" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>