<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.features.Credit_Dialog.credit_dialog_activity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_20sdp">


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:src="@drawable/ic_credit_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/get_more_credit"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/ai_notepad_is_based_on_the_paid_service_of_chatgpt_which_is_why_each_message_consumes_2_credits"
            android:textAlignment="center"
            android:textSize="@dimen/_14ssp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/lighgreyF9"
                app:cornerRadius="@dimen/_50sdp"
                app:strokeColor="@color/grayB1"
                app:strokeWidth="@dimen/_2sdp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_movie"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/get_credit_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/get_credit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_5_free_credits"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/purpleF0"
                    android:layout_marginTop="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_10ssp"
                    android:text="@string/watch_ad_to_earn_5_more_credits"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/get_credit_text"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>
        <TextView
            android:layout_marginBottom="@dimen/_20ssp"
            android:id="@+id/maybeLaterText"
            android:layout_marginTop="@dimen/_12ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maybe_later"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/purpleF0"/>

    </LinearLayout>
</LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
