<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_marginBottom="@dimen/_12sdp"

            android:textSize="@dimen/_23ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />


        <RelativeLayout
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_box_border"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp">

            <ImageView
                android:id="@+id/icSearch"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_search" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/icSearch"
                android:background="@color/transparent"
                android:hint="@string/search_languages"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_cross" />
        </RelativeLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_120sdp"
                android:contentDescription="@null"
                android:src="@drawable/ic_no_data_found" />

            <TextView
                android:textColor="@color/gray7C"
                android:layout_marginVertical="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_note_found" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>